# model-port

./: .gitignore  COMMIT_DATE_FIX.md  DOCUMENTATION.md  Dockerfile.final  Dockerfile.minimal  Dockerfile.test  GITHUB_RELEASE_INSTRUCTIONS.md  ISSUES.md  MANIFEST.in  PYPI_PUBLISHING.md  README.md  RELEASE_NOTES_V2.0.md  TESTING.md  cleanup.sh  environment.yml  fix_inference.py  prepare_github_release.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_library_import.py
.github/workflows/: publish.yml
docs/: release_notes.md
library_test_export/runtime/: Dockerfile.x86_64
modelport/: .gitignore  README.md  __init__.py  deploy_test.py  env_full.yml  environment.yml  export_test.py  fix_exporter.py  modelport.py  requirements.txt  run_all_tests.py  stress_test.py  test_export.py
modelport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
modelport/auto_detect_test/: capsule_spec.json  config.json  requirements.txt
modelport/auto_detect_test_validated/: capsule_spec.json  config.json
modelport/cli/: __init__.py  export.py  run.py
modelport/core/: __init__.py  docker_runner.py  exporter.py  model_utils.py  runtime.py
modelport/direct_test_export/: Dockerfile  inference.py
modelport/examples/: CMakeLists.txt  cpp_inference.cpp  direct_test_docker.py  inference.py  multiarch_test.py  run_all_tests.py  simple_usage.py  test_compile.py  test_export.py  test_run.py
modelport/modelport_capsule/: .dockerignore  capsule_spec.json  config.json
modelport/modelport_capsule/runtime/: Dockerfile.arm64
modelport/scripts/: setup_docker.sh
modelport_capsule/: inference.py
tests/: README.md  test_tvm_basic.py
tests/models/: simple_cnn.onnx  tiny_model.onnx
tests/tests/models/: tiny_model.onnx
